lang.java.statics.test/tests/positive/packages/qualified-reference-to-class-in-nested-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public p.q.B b;
    }

    [q] {

        [B]
        package p.q;
        public class B {}

    }

}
