lang.java.statics.test/tests/negative/packages/unqualified-reference-to-missing-class.no.javtest
STATIX fail java\.names\.lexical-type-name.*\"B\"
JAVAC  fail cannot find symbol

[p] {

    [A]
    package p;
    public class A {
        public B b;
    }

}
